--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,4 +1,9 @@
 /*     Navbar     */
+
+
+.dropdown-menu.active{
+  display: block;
+}
 .navbar .navbar-nav .nav-item {
     margin-right: 7px; }
     .navbar .navbar-nav .nav-item:last-child {
