--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -13,6 +13,22 @@ mat-panel-title{
         color: #0dcdbd;
     
 }
+
+.mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, .mat-step-header .mat-step-icon-state-edit{
+    background-color: #0dcdbd !important;
+}
+
+.mat-step-icon-state-number .mat-step-icon .mat-step-icon-selected{
+    background-color: #0dcdbd !important;
+}
+.mat-step-icon-selected{
+    background-color: #0dcdbd !important;
+}
+
+mat-step-icon-selected{
+    background-color: #0dcdbd !important;
+}
+
 input{
     width: auto;
 }
