--- a/src/app/profile/user-dashboard-profile/user-dashboard-profile.component.html
+++ b/src/app/profile/user-dashboard-profile/user-dashboard-profile.component.html
@@ -1,34 +1,62 @@
 <div class="dashborad-box">
     <h3 class="heading">Personal Information</h3>
     <div class="section-inforamation">
-    <form #form = 'ngForm' (ngSubmit)="formSubmit(form.value)">
+    <form [formGroup]="ProfileForm" (ngSubmit)="formSubmit(ProfileForm.value)">
+        <!-- <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-3">
+                <div class="team-item text-center">
+                       <img class="img-fluid" [src]="previewUrl" alt="">
+                    <input style="display: none;" #imageInput type="file" accept="image/*" (change)="processFile(imageInput)">
+                    <button class="btn"  (click)="imageInput.click()"> Save</button>
+                </div>
+                </div>
+        </div> -->
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" >
+                <h3>Choose File</h3>      
+                <div class="team-img d-flex image-preview" *ngIf="previewUrl">
+                  <img class="img-fluid image-preview" alt="Responsive image" [src]="previewUrl" />                 
+                </div>      
+                <div class="form-group">
+                </div>
+                <div *ngIf="fileUploadProgress">
+                    Upload progress: {{ fileUploadProgress }}
+                </div>
+                <div class="mb-3" *ngIf="uploadedFilePath">
+                    {{uploadedFilePath}}
+                </div>
+                <div class="form-group">
+                  <input type="file" value="Choose File" name="image" (change)="fileProgress($event)" />
+                </div>
+              </div>
+        </div>
     <div class="row">
-    <div class="col-sm-6">
-    <div class="form-group">
-    <label>First Name</label>
-    <input ngModel name="name" type="text" [value]="User.name" class="form-control" placeholder="Enter your First name">
+        <div class="col-sm-6">
+            <div class="form-group">
+                <label>First Name</label>
+                <input formControlName='name' type="text" [value]="User.name" class="form-control" placeholder="Enter your First name">
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="form-group">
+                <label>Email Address</label>
+                <input formControlName="email" type="text" class="form-control" placeholder="Ex: example@domain.com">
+            </div>
+        </div>
+            <div class="col-sm-6">
+            <div class="form-group">
+                <label>Phone Number</label>
+                <input formControlName="phone"   type="text" class="form-control" placeholder="Ex: +1-0000-0000-00">
+            </div>
+            </div>
+        <div class="col-lg-12">
+            <div class="form-group">
+                <label>Address</label>
+                <textarea formControlName="address" class="form-control" placeholder="Write your address here"></textarea>
+            </div>
+        </div>
     </div>
-    </div>
-    <div class="col-sm-6">
-    <div class="form-group">
-    <label>Email Address</label>
-    <input ngModel  name="email" [value]="User.email"  type="text" class="form-control" placeholder="Ex: example@domain.com">
-    </div>
-    </div>
-    <div class="col-sm-6">
-    <div class="form-group">
-    <label>Phone Number</label>
-    <input ngModel  name="phone" [value]="User.phone"  type="text" class="form-control" placeholder="Ex: +1-0000-0000-00">
-    </div>
-    </div>
-    <div class="col-lg-12">
-    <div class="form-group">
-    <label>Address</label>
-    <textarea ngModel name="address" [value]="User.address" class="form-control" placeholder="Write your address here"></textarea>
-    </div>
-    </div>
-    </div>
-    <button class="btn btn-common" type="submit">Submit</button>
+        <button class="btn btn-common" type="submit">Save</button>
     </form>
     </div>
     </div>
