--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -748,8 +748,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   -o-animation: fadeIn 0.4s;
   -ms-animation: fadeIn 0.4s;
 }
-
-.dropdown:hover .dropdown-menu {
+.dropdown-menu {
   display: block;
   position: absolute;
   text-align: left;
