--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -147,10 +147,13 @@
                                                       <a [routerLink]="[ '/news' ]">{{NCat.category}}  </a>
                                                     </p>
                                                     </li>
-                                                    <li class="hoverTrigger"><a href="#">Categories  <i class="fa fa-angle-down fa-indicator"></i><div class="mobileTriggerButton"></div></a>
+                                                    <li class="hoverTrigger"><a routerLink="/pages">Pages<div class="mobileTriggerButton"></div>
+                                                    </a> 
+                                                    </li>
+                                                    <!-- <li class="hoverTrigger"><a href="#">Categories  <i class="fa fa-angle-down fa-indicator"></i><div class="mobileTriggerButton"></div></a>
                                                       <ul class="drop-down-multilevel grid-col-12 effect-expand-top" style="transition: all 400ms ease 0s;"><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/category-classic/">Category 1  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/modern-variation/">Category 2  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/minimal-veriation/">Category 3  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/fancy-veriation/">Category 4  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/flat-variation/">Category 5  </a></li>
                                                       </ul>
-                                                    </li>
+                                                    </li> -->
                                                     <li class="hoverTrigger"><a href="#">Demos<i class="fa fa-angle-down fa-indicator"></i>
                                                           <div class="mobileTriggerButton"></div></a>
                                                           <div class="drop-down   grid-col-4 effect-expand-top" style="transition: all 400ms ease 0s;">
