--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,7 +8,7 @@
     <div class="header clearfix">
     <h2 *ngIf="User">{{User.name}}</h2>
     <h4>Real Estate Agent</h4>
-    <img [src]="User.profile_pic" alt="avatar" class="img-fluid profile-img">
+    <!-- <img [src]="User.profile_pic" alt="avatar" class="img-fluid profile-img"> -->
     </div>
     
     <div class="detail clearfix">
@@ -31,6 +31,11 @@
     <li *ngIf="User!=undefined && User.showroom.length>0" >
         <a routerLink='/profile/showroom'>
         <i class="lni-home"></i>Showroom
+        </a>
+    </li>
+    <li >
+        <a routerLink='/profile/pages'>
+        <i class="lni-home"></i>Pages
         </a>
     </li>
     <!-- <li>
